# URender

./: .gitignore  CMakeLists.txt  README.md  clean_build.bat  fast_start.bat
Dependencies/: CMakeLists.txt
Renderer/: CMakeLists.txt
Renderer/res/shaders/: Basic.shader  LightSource.shader  Lighting.shader  Shader3D.shader  SphereLighting.shader
Renderer/src/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  DepthBuffer.cpp  DepthBuffer.h  IndexBuffer.cpp  IndexBuffer.h  LightSource.cpp  LightSource.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Renderer/src/tests/: Test.cpp  Test.h  Test3D.cpp  Test3D.h  TestClearColor.cpp  TestClearColor.h  TestLighting.cpp  TestLighting.h  TestSphere.cpp  TestSphere.h  TestTexture2D.cpp  TestTexture2D.h
